add instruction handler and swagger
